schreibfehler / display issue on mobile

--- a/PortfolioWebsite/src/app/projects/projects.component.css
+++ b/PortfolioWebsite/src/app/projects/projects.component.css
@@ -47,7 +47,7 @@ img{
 
 @media only screen and (max-width: 768px){
     .card-div{
-        width: 100%;
+        width: 90%;
         min-height: 200px;
     }
     .even{
